<resources>
    <string name="app_name">Bip</string>
    <string name="title_activity_family">Family</string>
    <string name="title_activity_display_part_numbers">DisplayPartNumbers</string>
    <string name="title_activity_display_part_numbers_by_id_family">displayPartNumbersByIdFamily</string>

    <!-- All Activity -->
    <string name="titlePartNumber">Nom de référence : </string>
    <string name="titleFamily">Nom de famille :</string>



    <!-- Activity Family -->
    <string name="namePassByUserFamily">Nom de famille passé par l\'utilisateur : </string>
    <string name="nameUsedInLearFamily">Nom de famille utilisé par LEAR : </string>
    <string name="nameUsedInClientFamily">Nom de famille utilisé par l\'entreprise cliente : </string>
    <string name="date">Date : </string>
    <string name="client">Client : </string>
    <string name="buttonShowPartNumber">Afficher les références</string>

    <!-- Activity Part Number -->
    <string name="nameUsedInLearPartNumber">Nom de référence utilisé par LEAR : </string>
    <string name="nameUsedInClientPartNumber">Nom de référence utilisé par l\'entreprise cliente : </string>
    <string name="level">Niveau : </string>
    <string name="buttonStartTest">Lancer test =BIP</string>

    <!-- Activity Connector -->
    <string name="nameConnector">nom de connecteur</string>
    <string name="stepConnector">Numero de connecteur / Nombre de connecteurs</string>

    <!-- Activity Wire -->
    <string name="name">Nom : </string>
    <string name="nameWire">nom</string>
    <string name="color">Couleur : </string>
    <string name="colorWire">couleur</string>
    <string name="connector_A">Connecteur A</string>
    <string name="connector_B">Connecteur B</string>
    <string name="pin_A">Pin A</string>
    <string name="pin_B">Pin B</string>
    <string name="color_A">Couleur A</string>
    <string name="color_B">Couleur B</string>
    <string name="stepWire">Numero de fil / Nombre de fils </string>


    <!-- Activity Success -->
    <string name="nameFamily">Nom de famille : </string>
    <string name="namePartNumber">Nom de référence : </string>
    <string name="numberPartNumber">Nombre de connecteurs : </string>
    <string name="numberWire">Nombre de fils : </string>
    <string name="buttonRestart">Refaire le test</string>
    <string name="buttonReturn">Retour a la même famille</string>
    <string name="buttonHome">Acceuil</string>
    <string name="toast_crash">Something went wrong! we will find a solution.</string>

</resources>
