<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#2980b9"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/nameUsedInLear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="2dp"
        android:gravity="right"
        android:paddingRight="10dp"
        android:text="@string/nameUsedInLearPartNumber"
        android:textColor="#2980B9" />

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="right"
        android:tag="id"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/nameUsedInClient"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameUsedInLear"
        android:padding="2dp"
        android:text="@string/nameUsedInClientPartNumber"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameUsedInClient"
        android:padding="2dp"
        android:text="@string/date"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:padding="2dp"
        android:text="@string/level"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonIdCable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getIdCable"
        android:tag="0"
        android:drawableLeft="@drawable/button_partnumber"
        android:text="@string/buttonStartTest" />
</LinearLayout>