<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.myapplication2.DisplaySucces">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/success" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="#EB2B36">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:layout_row="0"
                android:background="#EB2B36"
                android:paddingLeft="20dp"
                android:text="@string/nameFamily"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/familySection"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:layout_row="0"
                android:background="#EB2B36"
                android:text="famille"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </GridLayout>

        <GridLayout
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="#2980B9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center_vertical"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:paddingLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:text="@string/namePartNumber" />

            <TextView
                android:id="@+id/partNumberSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center_vertical"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:text="référence"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </GridLayout>

        <GridLayout
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="#9b59b6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center_vertical"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:paddingLeft="20dp"
                android:text="@string/numberPartNumber"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/connectorSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center_vertical"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:text="10"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </GridLayout>

        <GridLayout
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="#16a085">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center_vertical"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:paddingLeft="20dp"
                android:text="Nombre de fils : "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/wireSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center_vertical"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:background="#16a085"
                android:onClick="setColorName"
                android:text="55"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </GridLayout>

        <GridLayout
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="4"
            android:layout_rowWeight="2">

            <Button
                android:id="@+id/buttonRefaire"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="#ffffff"
                android:onClick="startFixture"
                android:text="@string/buttonRestart"/>
        <!--       android:drawableLeft="@drawable/left" /> -->
            <Button
                android:id="@+id/buttonReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="#ffffff"
                android:onClick="startPartNumber"
                android:text="@string/buttonReturn" />
            <!--    android:drawableRight="@drawable/back" /> -->
            <Button
                android:id="@+id/buttonNextFixture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="#ffffff"
                android:onClick="startFamily"
                android:text="@string/buttonHome" />
            <!--    android:drawableRight="@drawable/home" /> -->

        </GridLayout>


    </GridLayout>
</LinearLayout>
